finish routes and oauth
